--- a/templates/partials/_menu.html
+++ b/templates/partials/_menu.html
@@ -56,7 +56,16 @@
                         <!-- Nav Start -->
                         <div class="classynav">
                             <ul>
-                                <li><a href="{% url 'index' %}">Home</a></li>
+                                {% if user.is_authenticated %}
+                                    <li><a href="{% url 'index' %}">Página Principal</a></li>
+                                    <li><a href="{% url 'dashboard' %}">Minhas Receitas</a></li>
+                                    <li><a href="{% url 'logout' %}">Sair</a></li>
+                                    <li><a href="{% url 'cria_receita' %}">Criar Receita</a></li>
+                                {% else %}
+                                    <li><a href="{% url 'index' %}">Home</a></li>
+                                    <li><a href="{% url 'login' %}">Login</a></li>
+                                    <li><a href="{% url 'cadastro' %}">Cadastro</a></li>
+                                {% endif %}
                             </ul>
 
                             <!-- Formulario de busca -->
